Deleting an object from the list and triangle spacing bug fixed

--- a/react/autocomplete/src/comp-autocomplete.scss
+++ b/react/autocomplete/src/comp-autocomplete.scss
@@ -32,7 +32,7 @@ $font-family: Helvetica, sans-serif;
   padding: 10px;
   .mod-socrata-autocomplete-triangle {
     position: absolute;
-    top: -15px;
+    top: -13px;
     left: 0;
     width: 0;
     height: 0;
